--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
-  "name": "boilerplate",
+  "name": "TaskListRT",
   "version": "1.0.0",
-  "description": "Simple react app",
+  "description": "Task Management Project",
   "main": "index.js",
   "scripts": {
-    "test": "karma start",
     "start": "node server.js"
   },
-  "author": "Andrew Mead",
-  "license": "MIT",
+  "author": "Emil Varghese",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^0.9.1",
-    "express": "^4.13.4",
+    "axios": "^0.15.3",
+    "express": "^4.14.0",
+    "firebase": "^3.6.5",
+    "moment": "^2.17.1",
     "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0"
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.0",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.1",
     "expect": "^1.14.0",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
+    "node-sass": "",
+    "react-addons-test-utils": "^0.14.7",
+    "sass-loader": "",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
